# doc/openapi.json
@@ -179,6 +179,13 @@
 					},
 					"suggested_quickname": {
 						"type": "string"
+					},
+					"suggested_servers": {
+						"items": {
+							"type": "string"
+						},
+						"nullable": true,
+						"type": "array"
 					}
 				},
 				"type": "object"
