# internal/handlers/server_info.go
@@ -6,8 +6,9 @@ import (
 )
 
 type ServerInfoResponse struct {
-	SuggestedQuickname string `json:"suggested_quickname"`
-	Description        string `json:"description"`
+	SuggestedQuickname string   `json:"suggested_quickname"`
+	Description        string   `json:"description"`
+	SuggestedServers   []string `json:"suggested_servers,omitempty"`
 }
 
 func GetServerInfo(cfg *config.Config) func(ctx fuego.ContextNoBody) (ServerInfoResponse, error) {
@@ -15,6 +16,7 @@ func GetServerInfo(cfg *config.Config) func(ctx fuego.ContextNoBody) (ServerInfo
 		return ServerInfoResponse{
 			SuggestedQuickname: cfg.QuickName,
 			Description:        cfg.Description,
+			SuggestedServers:   cfg.SuggestedServerList,
 		}, nil
 	}
 }
